# learnopengl

./: .gitignore  .gitmodules  CMakeLists.txt  build.ps1  license.md  readme.md
build-debug/: folder-info.txt
build-release/: folder-info.txt
cmake/: FindGLAD.cmake  FindGLFW.cmake  FindGLM.cmake  FindSTB.cmake
include/: CMakeLists.txt
include/LearnOpenGL/: CMakeLists.txt  camera-class.hpp  mesh-class.hpp  opengl-debug.hpp  shader-class.hpp  texture-struct.hpp  vertex-struct.hpp
shaders/basic/: fragment.glsl  vertex.glsl
shaders/lighted/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  camera-class.cpp  camera-class.hpp  learn-opengl.cpp  mesh-class.cpp  opengl-debug.cpp  opengl-debug.hpp  shader-class.cpp  shader-class.hpp
